--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,7 +1,7 @@
 .features {
   display: flex;
   align-items: center;
-  padding: 2rem 0;
+  padding: 0;
   width: 100%;
 }
 
@@ -15,5 +15,5 @@
   box-shadow: 0px 4px 16px rgba(35, 35, 35, 0.06);
   border-radius: 12px;
   padding: 36px;
-  margin: 20px 0;
+  margin: 10px 0;
 }
